k8s/namespace.yaml
# ============================================================
# namespace.yaml
# A namespace is like a folder inside Kubernetes.
# It isolates all our app's resources from other things
# running in the cluster (like ArgoCD, Prometheus etc.)
# All our resources will have: namespace: wanderlust
# ============================================================

apiVersion: v1
kind: Namespace
metadata:
  name: wanderlust
